--- a/client.html
+++ b/client.html
@@ -144,14 +144,33 @@
         }
         window.hideSettingsNotification = hideSettingsNotification;
 
-        function addMessage(text, type) {
-            const wrapper = document.createElement('div');
-            wrapper.className = `message ${type}`;
-            wrapper.innerHTML = `<div class="message-content">${text}</div><div class="message-time">${new Date().toLocaleTimeString()}</div>`;
-            chatMessages.appendChild(wrapper);
-            chatMessages.scrollTop = chatMessages.scrollHeight;
-            return wrapper;
-        }
+       function addMessage(text, type) {
+    const messageWrapper = document.createElement('div');
+    messageWrapper.className = `message ${type}`;
+    const messageContent = document.createElement('div');
+    messageContent.className = 'message-content';
+    
+    // リンクが含まれる場合はHTMLとして処理、そうでなければエスケープ
+    if (text.includes('<a href=')) {
+        // リンクタグ以外の危険なHTMLをエスケープ（基本的なセキュリティ対策）
+        let processedText = text
+            .replace(/<(?!\/?(a|br)\b)[^>]*>/gi, '') // a, br以外のタグを除去
+            .replace(/\n/g, '<br>');
+        messageContent.innerHTML = processedText;
+    } else {
+        // 通常のテキストはエスケープしてから改行を<br>に変換
+        messageContent.innerHTML = text.replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/\n/g, '<br>');
+    }
+    
+    messageWrapper.appendChild(messageContent);
+    const messageTime = document.createElement('div');
+    messageTime.className = 'message-time';
+    messageTime.textContent = new Date().toLocaleTimeString();
+    messageWrapper.appendChild(messageTime);
+    chatMessages.appendChild(messageWrapper);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+    return messageWrapper;
+}
 
         async function sendFeedback(element, rating) {
             const messageWrapper = element.closest('.message');
