注意書き追加

--- a/client.html
+++ b/client.html
@@ -76,6 +76,9 @@
                         - 新しいサークルを作るには？<br>
                         - 休学・復学・退学の手続きをしたいときは？<br>
                         様々な質問にお答えします！
+                        <span style="color:red; font-weight:bold;">
+                            ※氏名・住所・学籍番号などの個人情報は入力しないでください。
+                        </span>
                     </div>
                     <div class="message-time">システム起動時刻</div>
                 </div>
