会話ログ管理ツール削除

--- a/client.html
+++ b/client.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学生支援チャットボット</title>
+ <!-- 1. SupabaseのJavaScriptライブラリをCDNから読み込みます -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+    <!-- 2. ここでSupabaseクライアントを初期化します -->
+    <script>
+        // ▼▼▼▼▼ ここにあなたのSupabaseプロジェクトの実際の値を設定してください ▼▼▼▼▼
+        const SUPABASE_URL = 'https://fosaksdawnbnmykdlqmq.supabase.co';      // Supabaseダッシュボードの 'Project URL' を設定
+        const SUPABASE_ANON_KEY = 'your-public-anon-key'; // Supabaseダッシュボードの 'anon public' キーを設定
+        // ▲▲▲▲▲ ここまで ▲▲▲▲▲
+
+        // Supabaseクライアントを作成
+        // この 'supabase' という変数を、他のスクリプトでデータベース操作に利用できます。
+        const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    </script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; padding: 20px; overflow-x: hidden; }
