コメント機能修正

--- a/client.html
+++ b/client.html
@@ -167,8 +167,8 @@
     
     <div class="rating-container">
         <p>このチャットボットの全体的な評価を教えてください：</p>
-        <button class="rating-btn" data-rating="good">👍 良い</button>
-        <button class="rating-btn" data-rating="bad">👎 悪い</button>
+        <button class="rating-btn" data-rating="good">👍 良い回答です</button>
+        <button class="rating-btn" data-rating="bad">👎 良くない回答です</button>
     </div>
     <textarea id="commentTextarea" placeholder="ここにコメントを入力してください..."></textarea>
     <button id="sendCommentBtn">送信</button>
