--- a/client.html
+++ b/client.html
@@ -432,18 +432,20 @@ if (botMessageElement.dataset.logId) {
                     }
                     const chunk = decoder.decode(value, { stream: true });
                     const lines = chunk.split('\n');
-                    for (const line of lines) {
-                        if (line.trim().startsWith('data: ')) {
-                            try {
-                                const data = JSON.parse(line.substring(6));
-                                if (data.content) {
-                                    fullResponse += data.content;
-                                    botMessageContent.innerHTML = fullResponse;
-                                }
-                                if (data.log_id) botMessageElement.dataset.logId = data.log_id;
-                            } catch (e) {}
-                        }
-                    }
+                  for (const line of lines) {
+    if (line.trim().startsWith('data: ')) {
+        try {
+            const data = JSON.parse(line.substring(6));
+            if (data.content) {
+                fullResponse += data.content;
+                botMessageContent.innerHTML = fullResponse;
+            }
+            // ここを修正！
+            if (data.log_id) botMessageElement.dataset.logId = data.log_id;
+            if (data.feedback_id) botMessageElement.dataset.logId = data.feedback_id; // ←追加
+        } catch (e) {}
+    }
+}
                 }
             } catch (error) {
                 botMessageContent.innerHTML = `エラーが発生しました: ${error.message}`;
